--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
       <link rel="stylesheet" href="https://unpkg.com/bulma@0.8.0/css/bulma.min.css" />
       <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+      <script src="https://cdn.jsdelivr.net/npm/gamedig@0.2.14/lib/"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js"></script>
    </head>
    <body>
       <!-- Begin Navigation Bar -->
@@ -191,6 +193,8 @@
                PixelBedrock All Rights Reserved
             </p>
             <hr/>
+            <script>
+            </script>
             <h5>Provided by Isla<3</h5>
          </div>
       </footer>
