changed desc / removed the keywords lol

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <meta property="og:type" content="website" />
       <meta property="og:url" content="http://home.pixelbe.cf/" />
       <meta property="og:image" content="" />
-      <meta property="og:description" content="PixelBedrock or PixelBE is a minigames server for Minecraft: Bedrock Edition | minecraft skins Minecraft classicminecraft dungeonsminecraft serversminecraft modsminecraft birthdayminecraft beesminecraft blast furnaceminecraft beehiveminecraft building ideasminecraft buildsb minecraft bannerminecraft b teamminecraft bhopminecraft b&mminecraft b team serversminecraft b.a.s.eminecraft circleminecraft castleminecraft color codesminecraft creeperminecraft composterc minecraft serverc minecraft f3c minecraft bannerc minecraft skinc minecraft songminecraft.iominecraft diamondminecraft discordminecraft dispenser"/>
+      <meta property="og:description" content="PixelBedrock or PixelBE is a minigames server for Minecraft: Bedrock Edition | Provided by Isla<3"/>
       <meta name="theme-color" content="#1F2C6C" />
       <title>PixelBedrock</title>
       <!-- Libraries and Paths -->
